[package]
name = "async_jira_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
async-trait = "0.1.74"
clap = { version = "4.4.8", features = ["derive"] }
futures = "0.3.28"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["std", "env-filter"] }
unicode-width = "0.1.11"
uuid = { version = "1.4.1",features = ["v4"] }
